# persuation_bot

./: .env.example  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  logging.ini  pyproject.toml  pytest.ini  requirements.txt  yoyo.ini
.github/workflows/: bump.yml  development.yml
app/: deps.py  factories.py  main.py  migrate.py  settings.py  start.py  utils.py
app/adapters/llm/: anthropic.py  constants.py  dummy.py  fallback.py  openai.py
app/adapters/nli/: hf_nli.py
app/adapters/repositories/: memory.py  (+2 more)
app/api/: dto.py  errors.py  messages.py  requests.py  routes.py
app/domain/: concession_policy.py  consession_policy.py  enums.py  errors.py  exceptions.py  models.py  parser.py  verdicts.py
app/infra/: db.py  debate_store.py  llm.py  nli.py  service.py
app/llm/: dummy.py  interface.py
app/nli/: ops.py
app/repositories/: base.py  pg.py
app/services/: concession_policy_engine.py  concession_service.py  message_service.py  nli_graded.py
app/utils/: lang.py  text.py
migrations/: 20250817_01_create_initial.py  20250818_01_extra_index.py  20250904_01_alter_table.py
tests/: conftest.py  fakes.py  test_anthropic_adapter.py  test_concession_service.py  test_debate_store.py  test_dto.py  test_factories.py  test_fallback.py  test_llm.py  test_math.py  test_messages.py  test_nli.py  test_ok.py  test_openai_adapter.py  test_parser.py  test_repository.py  test_routes.py  test_service.py  test_win_cons.py
tests/integration/: test_dto.py  test_edge_cases.py  test_llm_format.py  test_never_conclude.py  test_routes.py  test_win_con.py
(+7 files in other folders)
