[tool.poetry]
name = "persuasion-bot"
version = "0.1.0"
description = "A debate-oriented chatbot backend."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"

anthropic = "*"
fastapi = "*"
httpx = "*"
huggingface_hub = "*"
openai = "*"
protobuf = "*"
psycopg2-binary = "*"
psycopg = { version = "3.2.*", extras = ["binary"] }
psycopg_pool = "*"
pydantic-settings = "*"
python-dotenv = "*"
torch = "*"
transformers = "*"
uvicorn = { version = "*", extras = ["standard"] }
yoyo-database-migrations = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
ruff = "*"
commitizen = "~=3.9.0"
pre-commit = "*"

[tool.pytest.ini_options]
addopts = "-ra -q --cov=app --cov-report=term-missing"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py39"
indent-width = 4
line-length = 88   # o 100/120/140 según prefieras

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
known-first-party = ["app", "tests"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.2.2"
tag_format = "v$version"
update_changelog_on_bump = true
commit_message_pattern = "(?s)(build|ci|docs|feat|fix|perf|refactor|style|tests?|chore|revert|bump)(\\(\\S+\\))?!?:( [^\\n\\r]+)((\\n\\n.*)|(\\s*))?$"
